--- a/AspNetCoreMVC-SchoolSystem/appsettings.json
+++ b/AspNetCoreMVC-SchoolSystem/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SchoolDd2025;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "SchoolDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SchoolDd2025;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;MultipleActiveResultSets=True"
   }
 }
