--- a/AspNetCoreMVC-SchoolSystem/appsettings.json
+++ b/AspNetCoreMVC-SchoolSystem/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SchoolDd2025;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;MultipleActiveResultSets=True"
+    //"SchoolDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SchoolDd2025;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;MultipleActiveResultSets=True"
+    "SchoolDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SchoolDd2025;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;MultipleActiveResultSets=True",
+    "AzureDbConnection": "Server=tcp:myfreesqldbserverskainschoolserver.database.windows.net,1433;Initial Catalog=myFreeDB;Persist Security Info=False;User ID=skain;Password=45TRgh78**;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
