--- a/AspNetCoreMVC-SchoolSystem/appsettings.json
+++ b/AspNetCoreMVC-SchoolSystem/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     //"SchoolDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SchoolDd2025;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;MultipleActiveResultSets=True"
     "SchoolDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SchoolDd2025;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;MultipleActiveResultSets=True",
-    "AzureDbConnection": "Server=tcp:myfreesqldbserverskainschoolserver.database.windows.net,1433;Initial Catalog=myFreeDB;Persist Security Info=False;User ID=skain;Password=45TRgh78**;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "AzureDbConnection": "Server=tcp:myfreesqldbserverskainschoolserver.database.windows.net,1433;Initial Catalog=myFreeDB;Persist Security Info=False;User ID=skain;Password=45TRgh78**;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "MonstrerAspConnection": "Server=db21313.databaseasp.net; Database=db21313; User Id=db21313; Password=j=6G3xC+b%8T; Encrypt=False; MultipleActiveResultSets=True; "
   }
 }
